@@ -75,6 +75,7 @@ export("bw.pcf")
 export("bw.ppl")
 export("bw.pplHeat")
 export("bw.relrisk")
+export("bw.relrisk.ppp")
 export("bw.scott")
 export("bw.scott.iso")
 export("bw.smoothppp")
@@ -548,6 +549,7 @@ S3method("as.data.frame", "fv")
  S3method("as.tess", "quadrattest")
 S3method("auc", "ppp")
 S3method("berman.test", "ppp")
+   S3method("bw.relrisk", "ppp")
 S3method("cbind", "fv")
 S3method("CDF", "density")
 S3method("cdf.test", "ppp")
