@@ -1,3 +1,3 @@
 date version nhelpfiles nobjects ndatasets Rlines srclines
 "2022-05-25" "3.0-0" 224 500 0 30319 6183
-"2022-06-17" "2.999-999.005" 224 503 0 30399 6183
+"2022-06-17" "2.999-999.006" 224 504 0 30403 6183
